--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="card m-5">
-                    <img class="card-img-top" src="/Users/lauraoberwetter/bootcamp/Homework/updatedPortfolio/assets/fridgeFood.png" alt="Card image cap">
+                    <img class="card-img-top" src="assets/fridgeFood.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Fridge Foodie</h5>
                         <p class="card-text">This app....</p>
@@ -82,7 +82,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="card m-5">
-                    <img class="card-img-top" src="/Users/lauraoberwetter/bootcamp/Homework/updatedPortfolio/assets/codingQuiz.png" alt="Card image cap">
+                    <img class="card-img-top" src="assets/codingQuiz.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Coding Quiz</h5>
                         <p class="card-text">This app....</p>
@@ -92,7 +92,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="card m-5">
-                    <img class="card-img-top" src="/Users/lauraoberwetter/bootcamp/Homework/updatedPortfolio/assets/loPortfolio.png" alt="Card image cap">
+                    <img class="card-img-top" src="assets/loPortfolio.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Portfolio 1.0</h5>
                         <p class="card-text">First portfolio draft</p>
@@ -102,7 +102,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="card m-5">
-                    <img class="card-img-top" src="/Users/lauraoberwetter/bootcamp/Homework/updatedPortfolio/assets/pwdGen.png" alt="Card image cap" alt="Card image cap">
+                    <img class="card-img-top" src="assets/pwdGen.png" alt="Card image cap" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Password Generator</h5>
                         <p class="card-text">This password generator....</p>
@@ -112,7 +112,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="card m-5">
-                    <img class="card-img-top" src="/Users/lauraoberwetter/bootcamp/Homework/updatedPortfolio/assets/workSched.png">
+                    <img class="card-img-top" src="assets/workSched.png">
                     <div class="card-body">
                         <h5 class="card-title">Work Day Scheduler</h5>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -122,7 +122,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="card m-5">
-                    <img class="card-img-top" src="/Users/lauraoberwetter/bootcamp/Homework/updatedPortfolio/assets/weatherDash.png" alt="Card image cap">
+                    <img class="card-img-top" src="assets/weatherDash.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Weather Dashboard</h5>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
