--- a/index.html
+++ b/index.html
@@ -42,28 +42,20 @@
     </div>
     <section id="About">
         <h1>Hi, I'm Laura :) </h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-            est
-            laborum.</p>
+        <p>I'm a current student of Northwestern University's Full Stack Web Development Boot Camp.</p>
         <div class="card-group">
             <div class="card">
                 <i class="fas fa-book-reader"></i>
                 <div class="card-body">
                     <h5 class="card-title">Education</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
+                    <p class="card-text">University of Wisconsin-Madison<br><br>BA in Communication Arts with Minors in Business, Entrepreneurship, and Leadership</p>
                 </div>
             </div>
             <div class="card">
                 <i class="fas fa-award"></i>
                 <div class="card-body">
                     <h5 class="card-title">Accomplishments</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.
+                    <p class="card-text">Director of WUD Music<br><br>Speaker at SXSW 2017 & 2018<br><br>Union Trustee Leadership Award Recipiant
                     </p>
                 </div>
             </div>
@@ -71,82 +63,78 @@
                 <i class="fas fa-heart"></i>
                 <div class="card-body">
                     <h5 class="card-title">For Fun</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This card has even longer content than the first to show that equal height action.</p>
+                    <p class="card-text">I love going to concerts, studying the science of scent, and making spreadsheets for everything</p>
                 </div>
             </div>
         </div>
     </section>
     <section id="work">
         <h1>Recent Work</h1>
-        <div class="card-deck">
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="card m-5">
+        <div class="card-deck m-5">
+            <div class="row m-5">
+                <div class="col-sm-4 d-flex align-items-stretch">
+                    <div class="card">
                         <img class="card-img-top" src="assets/fridgeFood.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Fridge Foodie</h5>
-                            <p class="card-text">This app....</p>
+                            <p class="card-text">provides customized recipes and wine pairings based on the content of the user's fridge</p>
                             <a href="https://agrassl.github.io/FridgeFoodieRecipes/index.html"
                                 class="btn btn-light">Go!</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="card m-5">
+                <div class="col-sm-4 d-flex align-items-stretch">
+                    <div class="card">
                         <img class="card-img-top" src="assets/codingQuiz.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Coding Quiz</h5>
-                            <p class="card-text">This app....</p>
+                            <p class="card-text">tests user's knowledge of basic web-dev teminology</p>
                             <a href="https://lauraoberwetter.github.io/codingQuiz/" class="btn btn-light">Go!</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="card m-5">
+                <div class="col-sm-4 d-flex align-items-stretch">
+                    <div class="card">
                         <img class="card-img-top" src="assets/loPortfolio.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Portfolio 1.0</h5>
-                            <p class="card-text">First portfolio draft</p>
-                            <a href="https://lauraoberwetter.github.io/02Homework/" class="btn btn-primary">Go
+                            <p class="card-text">the first draft of a portfolio that I created using HTML and CSS</p>
+                            <a href="https://lauraoberwetter.github.io/02Homework/" class="btn btn-light">Go
                                 somewhere</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="card m-5">
+            <div class="row m-3">
+                <div class="col-sm-4 d-flex align-items-stretch">
+                    <div class="card">
                         <img class="card-img-top" src="assets/pwdGen.png" alt="Card image cap" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Password Generator</h5>
-                            <p class="card-text">This password generator....</p>
+                            <p class="card-text">creates a unique and randomized password using HTML, CSS, and JavaScript</p>
                             <a href="https://lauraoberwetter.github.io/passwordGenerator/"
-                                class="btn btn-primary">Go!</a>
+                                class="btn btn-light">Go!</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="card m-5">
+                <div class="col-sm-4 d-flex align-items-stretch">
+                    <div class="card">
                         <img class="card-img-top" src="assets/workSched.png">
                         <div class="card-body">
                             <h5 class="card-title">Work Day Scheduler</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.
-                            </p>
-                            <a href="https://lauraoberwetter.github.io/dayPlanner/" class="btn btn-primary">Go!</a>
+                            <p class="card-text">uses JavaScript and Moment.JS to dynamically alter formatting based on the time of day</p>
+                            <a href="https://lauraoberwetter.github.io/dayPlanner/" class="btn btn-light">Go!</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="card m-5">
+                <div class="col-sm-4 d-flex align-items-stretch">
+                    <div class="card">
                         <img class="card-img-top" src="assets/weatherDash.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Weather Dashboard</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.
-                            </p>
+                            <p class="card-text">utilizes several APIs to display weather forecasts of whatever city is searched</p>
                             <a href="https://lauraoberwetter.github.io/weatherDashboard/"
-                                class="btn btn-primary">Go!</a>
+                                class="btn btn-light">Go!</a>
                         </div>
                     </div>
                 </div>
@@ -161,21 +149,21 @@
                 <i class="fas fa-envelope"></i>
                 <div class="card-body">
                     <h5 class="card-title">Email</h5>
-                    <a href="mailto:leoberwetter@gmail.com" class="btn btn-primary">Go!</a>
+                    <a href="mailto:leoberwetter@gmail.com" class="btn btn-light">Go!</a>
                 </div>
             </div>
             <div class="card">
                 <i class="fab fa-linkedin"></i>
                 <div class="card-body">
                     <h5 class="card-title">LinkedIn</h5>
-                    <a href="https://www.linkedin.com/in/lauraoberwetter/" class="btn btn-primary">Go!</a>
+                    <a href="https://www.linkedin.com/in/lauraoberwetter/" class="btn btn-light">Go!</a>
                 </div>
             </div>
             <div class="card">
                 <i class="fab fa-github"></i>
                 <div class="card-body">
                     <h5 class="card-title">GitHub</h5>
-                    <a href="https://github.com/LauraOberwetter" class="btn btn-primary">Go!</a>
+                    <a href="https://github.com/LauraOberwetter" class="btn btn-light">Go!</a>
                 </div>
             </div>
         </div>
